syntax = "proto3";

package doota.reddit.v1;

option go_package = "github.com/shank318/doota/pb/doota/reddit/v1;pbreddit";

message Integration {
  string user_name = 1;
}

message RemoveSubRedditRequest {
  string id = 1; // eg. r/SAAS
}

message AddSubRedditRequest {
  string url = 1; // eg. r/SAAS
}

message SubReddit {
  string id = 1;
  string url = 2;
  string name = 3;
  string description = 4;
  SubRedditMetadata metadata = 5;
  optional string title = 6;
}

message SubRedditMetadata {}

message GetSubredditsResponse {
  repeated SubReddit subreddits = 1;
}
